# FamilyDoctorTestTask

./: .env.example  README.md  pyproject.toml
familydoctortesttask/: app.py  database.py  settings.py  tables.py
familydoctortesttask/api/: __init__.py  weather.py
familydoctortesttask/models/: weather.py
familydoctortesttask/service/: weather.py
tests/: test_familydoctortesttask.py
