[tool.poetry]
name = "FamilyDoctorTestTask"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
